@@ -1,6 +1,7 @@
 CHANGES IN VERSION 0.2.3
 ------------------------
- o 
+ o Add `isCleaved` method. [2015-01-03 Sat]
+ o
 
 CHANGES IN VERSION 0.2.2
 ------------------------
